# opengupiao

./: .gitignore  .gitmodules  start-dev.sh
backend/: .env.example  Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: market.rs  mod.rs  portfolio.rs  router.rs
backend/src/db/: mod.rs  models.rs
backend/src/openbb_bridge/: mod.rs  py_embed.rs
backend/src/services/: mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: EChartsKline.vue  EChartsLine.vue  KlineChart.vue  NeuButton.vue  NeuCard.vue  NeuLayout.vue  PriceLineChart.vue  WatchlistPanel.vue
frontend/src/composables/: useApi.ts  useExchangeRates.ts
frontend/src/pages/: Assets.vue  Dashboard.vue  ExchangeRates.vue  Learning.vue  Market.vue  Portfolio.vue
frontend/src/router/: index.ts
frontend/src/stores/: market.ts  portfolio.ts
frontend/src/styles/: neumorphism.css
frontend/src/types/: index.ts
gupiaocli/: Cargo.toml
gupiaocli/src/: checks.rs  cli.rs  deploy.rs  environment.rs  main.rs  process.rs  project.rs  tasks.rs
